--- a/MainPage/Index.html
+++ b/MainPage/Index.html
@@ -1,202 +1,103 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-		<title>Home</title>
-
-		<meta charset="utf-8">
-		<!--  comments -->
-		
-		
-		
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-		
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		
-		<!-- My CSS -->
-		<link rel="stylesheet" href = "KiCss.css">
-
-		<!-- jQuery library -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-
-
-		<!-- Latest compiled JavaScript -->
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
-	</head>
-
-	<body style="padding-top:50px">
-	
-	<!--Navigation Pills -->
-	
-	<nav class="navbar-inverse navbar-fixed-top ki_navbar">
-	<div class="container ki_navbardiv">
-		<ul class="nav nav-pills ki_navbarul">
-		  <li role="presentation" class="active"><a href="index.html">Home</a></li>
-		  <!-- <li role="presentation"><a href="education.html">Education</a></li>
-		  <!-- <li role="presentation"><a href="skills.html">Skills</a></li>
-		  <!-- <li role="presentation"><a href="experience.html">Experience</a></li>
-		  <!-- <li role="presentation"><a href="portfolio.html">Portfolio</a></li>
-		<!-- for next iternation of development
-		<li class="navbar-right" role="presentation"><a href="#">Contact</a></li> -->
-		</ul>
-	</div>
-		</nav>
-
-
-	<!--End of Navigation Pills-->
-			
-		
-		
-		
-		<div class="jumbotron" id="mainJumbo">
-		
-		
-		<div class = "container">
-		<h1 id="myName">
-		Krishna Innovation
-		
-		</h1>
-		
-		<div id = "ki_spans" class="container">
-		
-		
-		<span id="krk_span1" class="ki_span"> 
-		Software
-		
-		</span>
-
-		<span id="krk_span2" class="ki_span krk_span_padleft">
-		Technology
-		
-		</span>
-
-		
-		<span id= "krk_span3" class="ki_span krk_span_padleft">
-		Other
-		
-		</span>
-		
-		<span class="ki_span krk_span_padleft" >
-		News
-		
-		</span>
-	
-		
-		
-
-		</div>
-		
-		
-			</div>
-			
-		
-		
-		</div> <!--End of Jumbotron-->
-		
-		
-		
-		
-		
-		
-		
-	
-	<div class = "jumbotron" id="elevator_pitch_jumbotron">
-	
-	
-	
-	<div class="container" style="text-align: center">
-	<h1 style="color:white">
-	The Elevator Pitch
+  <head>
+    <meta charset="ISO-8859-1">
+      <title>Home</title>
+      <meta charset="utf-8">
+        <!--  comments -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+          <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+            <!-- Bootstrap CSS -->
+            <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+              <!-- My CSS -->
+              <link rel="stylesheet" href = "KiCss.css">
+                <!-- jQuery library -->
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+                <!-- Latest compiled JavaScript -->
+                <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+              </head>
+              <body style="padding-top:50px">
+                <!--Navigation Pills -->
+                <nav class="navbar-inverse navbar-fixed-top ki_navbar">
+                  <div class="container ki_navbardiv">
+                    <ul class="nav nav-pills ki_navbarul">
+                      <li class="active">
+                        <a href="index.html">Home</a>
+                      </li>
+                    </ul>
+                  </div>
+                </nav>
+                <!--End of Navigation Pills-->
+                <div class="jumbotron" id="mainJumbo">
+                  <div class = "container">
+                    <h1 id="myName">Krishna Innovation</h1>
+                    <div id = "ki_spans" class="container">
+                      <span id="ki_span1" class="ki_span"> 
+			Software
+			</span>
+                      <span id="ki_span2" class="ki_span krk_span_padleft">
+			Technology
+			</span>
+                      <span id= "ki_span3" class="ki_span krk_span_padleft">
+			Other
+			</span>
+                      <span class="ki_span krk_span_padleft" >
+			News
+			</span>
+                    </div>
+                  </div>
+                </div>
+                <!--End of Jumbotron-->
+                <div class = "jumbotron" id="elevator_pitch_jumbotron">
+                  <div class="container" style="text-align: center">
+                    <h1 style="color:white">
+	What is Krishna Innovation
 	
 	
 	</h1>
+                    <div class="container">
+                      <p id="elevator_pitch_paragraph">
 	
-	<div class="container">
-	<p id="elevator_pitch_paragraph">
-	
-		Hi, my name is Kevin Khan and I'm a full-time student, as well as a full-time employee. I attend DeVry University
-		where I'm pursuing my Bachelor's Degree in Computer Information Systems, with a concentration in Database Management. I work as a Data Specialist
-		at Benchmark Education Company. Previously, I worked as a Database Assistant for almost two years at a non-profit organization.
-		I'm proficient in Microsoft Office, and know a few computer languages -- 0
-        <br> <b style="color:white">VBA</b>,<b style="color:white"> C#</b>, and of course, <b style="color:white">SQL</b>.
-		
-		
+		We are a beginning IT corporate company based in Gujarat, Surat, India. We delivery web services like website development,
+		software development, E-Commerce website development, Gamming Application development and mobile application development (Android). 
+     		
 	</p>
-	
-	</div>
-	</div>
-	
-	
-	
-	</div>
-	
-	
-	<div class ="container" style="margin-bottom: 100px">
-	
-	
-	<div class="row">
-	
-	<div class="col-md-4">
-	
-	
-	<h2 style="text-align: center">
-	Interests
+                    </div>
+                  </div>
+                </div>
+                <div class ="container" style="margin-bottom: 100px">
+                  <div class="row">
+                    <h1 style="text-align: center">OUR BEST SERVICES</h1>
+                    <div class="col-md-4">
+                      <h2 style="text-align: center">
+	Web Design
 	
 	
 	</h2>
-	
-	<p>
-	
-	Technological advances, innovation and creativity grab my attention.
-	I'm interested in anything to do with computers, and computer programming
-	is an absolute passion of mine.
-	
-	
+                      <p>
+	Our designing team is working really hard to supply creative and attractive web design concepts to the clients and fulfill their expectations .
 	</p>
-	
-	</div>
-	
-	<div class="col-md-4">
-	<h2 style="text-align: center">Hobbies</h2>
-	
-	<p> 
-	Chess is one of my favorite hobbies; I'm a student of the game
-	and believe a lot of life lessons can be discovered at the chess board.
-	
-	In my free time, I also flirt with developing mobile apps.
+                    </div>
+                    <div class="col-md-4">
+                      <h2 style="text-align: center">Web Development</h2>
+                      <p> 
+	We provide the quality web development to our client, we follow industry standards to develop our work and provide flexibility to the users.
 	</p>
-	</div>
-	
-	<div class="col-md-4">
-	
-	<h2 style="text-align: center">Hopes & Dreams</h2>
-	
-	<p>
-		Eventually, I hope to one day develop an app (or a website)
-		that provides something of value to others.
-		
-		
-	
-	
+                    </div>
+                    <div class="col-md-4">
+                      <h2 style="text-align: center">E-Commerce Solution</h2>
+                      <p>
+	We are working on E-Commerce development to provide a hassel free experience to manage online store for any business model.
 	</p>
-	
-	</div>
-	
-	
-	</div>
-	
-	
-	
-	</div>
-		
-
-	</body>
-
-</html>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <h2 style="text-align: center">Mobile App Development</h2>
+                    <p>
+	Develop the mobile Application for all type of business and requirement, which help the client to connect with there system on one tap.
+	</p>
+                  </div>
+                </div>
+              </div>
+            </body>
+          </html>
