--- a/MainPage/Index.html
+++ b/MainPage/Index.html
@@ -65,9 +65,9 @@
                 </li>
                 <li><a href="#">Pages</a>
                   <ul class="dropdown">
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#">About Us</a></li> <!-- about.html -->
+                    <li><a href="#">Services</a></li> <!-- services.html -->
+                    <li><a href="#">Contact</a></li> <!-- contact.html -->
                   </ul>
                 </li>
               </ul>
